--- a/chat.html
+++ b/chat.html
@@ -7,6 +7,7 @@
       src="https://kit.fontawesome.com/2e53302c86.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Chat| Kakao Clone</title>
   </head>
   <body>
@@ -26,7 +27,7 @@
       <div class="header__header-column">
         <div class="header__back-btn">
           <a href="index.html">
-            <i class="fas fa-arrow-left fa-2x"></i>
+            <i class="fas fa-arrow-left"></i>
           </a>
         </div>
         <h1 class="header__title">Best Friend</h1>
@@ -35,16 +36,16 @@
         <span class="header-icon">
           <i class="fas fa-search"></i>
         </span>
-        <div class="header-icon">
+        <span class="header-icon">
           <i class="fas fa-bars"></i>
-        </div>
+        </span>
       </div>
     </header>
     <main class="chat">
       <ul class="chat__messages">
         <span class="chat__timestamp">Friday, April 10. 2020</span>
         <li class="incoming message message">
-          <img class="chat__avatar g-avatar" src="images/avatar.jpg" />
+          <img class="chat__avatar m-avatar" src="images/avatar.jpg" />
           <span class="message__author">JOE</span>
           <div class="message__content">
             <div class="message bubble">
