--- a/friends.html
+++ b/friends.html
@@ -7,6 +7,7 @@
       src="https://kit.fontawesome.com/2e53302c86.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Friends | Kakao Clone</title>
   </head>
   <body>
@@ -37,7 +38,7 @@
     </header>
     <main class="friends">
       <header class="friends__header">
-        <div class="friends__friend friend friend--lg">
+        <div class="friends__friend friend">
           <div class="friend__column">
             <img src="images/avatar.jpg" class="g-avatar friend__avatar" />
             <div class="friend__content">
@@ -52,10 +53,10 @@
         </div>
       </header>
       <div class="friends__plus">
-        <h5 class="friends__plus-title">Plus friend</h5>
+        <h5 class="friends__title">Plus friend</h5>
         <div class="friends__friend friend friend">
           <div class="friend__column">
-            <img src="images/avatar.jpg" class="g-avatar friend__avatar" />
+            <img src="images/avatar.jpg" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
                 Plus friends
@@ -68,11 +69,9 @@
         <h5 class="friends__title">Friends 169</h5>
         <li class="friends__friend friend friend--lg">
           <div class="friend__column">
-            <img src="images/avatar.jpg" class="g-avatar friend__avatar" />
+            <img src="images/avatar.jpg" class="friend__avatar" />
             <div class="friend__content">
-              <span class="friend-name">
-                Yun Junghun
-              </span>
+              <span class="friend__name">JOE</span>
               <span class="friend__status">
                 nomadcoders.co
               </span>
