--- a/more.html
+++ b/more.html
@@ -7,6 +7,7 @@
       src="https://kit.fontawesome.com/2e53302c86.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="css/styles.css" />
     <title>More | Kakao Clone</title>
   </head>
   <body>
@@ -39,49 +40,50 @@
           </a>
         </span>
       </div>
-      <div class="friends__friend friend friend--lg">
-        <div class="friend__column">
-          <img src="images/avatar.jpg" class="g-avatar friend__avatar" />
-          <div class="friend__content">
-            <span class="friend-name">
-              Yun Junghun
-            </span>
-            <span class="friend__status">
-              wjdgns1734@naver.com
-            </span>
-          </div>
-        </div>
-        <div class="friend-column">
-          <i class="far fa-comment-alt fa-2x"></i>
+    </header>
+    <div class="friends__friend friend friend--lg">
+      <div class="friend__column">
+        <img src="images/avatar.jpg" class="g-avatar friend__avatar" />
+        <div class="friend__content">
+          <span class="friend__name">
+            Yun Junghun
+          </span>
+          <span class="friend__status">
+            wjdgns1734@naver.com
+          </span>
         </div>
       </div>
-      <ul class="more__btn-list">
-        <li class="more__btn">
-          <span class="more__btn-icon">
-            <i class="far fa-smile fa-2x"></i>
-          </span>
-          <span class="more__btn-title">
-            Emoticons
-          </span>
-        </li>
-        <li class="more__btn">
-          <span class="more__btn-icon">
-            <i class="fas fa-brush fa-2x"></i>
-          </span>
-          <span class="more__btn-title">
-            Themes
-          </span>
-        </li>
-        <li class="more__btn">
-          <span class="more__btn-icon">
-            <i class="fab fa-kickstarter fa-2x"></i>
-          </span>
-          <span class="more__btn-title">
-            Account
-          </span>
-        </li>
-      </ul>
-    </header>
+      <div class="friend-column">
+        <i class="far fa-comment-alt fa-2x"></i>
+      </div>
+    </div>
+    <ul class="more__btn-list">
+      <li class="more__btn">
+        <span class="more__btn-icon">
+          <i class="far fa-smile fa-2x"></i>
+        </span>
+        <span class="more__btn-title">
+          Emoticons
+        </span>
+      </li>
+      <li class="more__btn">
+        <span class="more__btn-icon">
+          <i class="fas fa-brush fa-2x"></i>
+        </span>
+        <span class="more__btn-title">
+          Themes
+        </span>
+      </li>
+      <li class="more__btn">
+        <span class="more__btn-icon">
+          <i class="fab fa-kickstarter fa-2x"></i>
+        </span>
+        <span class="more__btn-title">
+          Account
+        </span>
+      </li>
+    </ul>
+
     <section class="more__suggestions">
       <h5 class="more__title">Suggestions</h5>
       <ul class="more__suggestions-list">
